--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
-    <title>Hello from Electron renderer!</title>
+    <title>Pomodoro - Electron</title>
   </head>
   <body>
       <h1>HELLO WORLD</h1>
