--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <title>Pomodoro - Electron</title>
-  </head>
-  <body>
-      <h1>HELLO WORLD</h1>
-  </body>
+    <html>
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+          http-equiv="Content-Security-Policy"
+          content="default-src 'self'; script-src 'self'"
+        />
+        <title>Pomodoro - Electron</title>
+    </head>
+    <body>
+        <div id="clock">00:00</div>
+        <button id="start">Start</button>
+        <button id="pause">Pause</button>
+        <button id="stop">Stop</button>
+    </body>
 </html>
