--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,6 @@
         <button id="start">Start</button>
         <button id="pause">Pause</button>
         <button id="stop">Stop</button>
+        <script src="../dist/render.js" defer></script>
     </body>
 </html>
