removing os title bar, and making window draggable

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
         <link rel="stylesheet" type="text/css" href="index.css"></link>
         <title>Pomodoro - Electron</title>
     </head>
-    <body class="background center">
+    <body class="background center drag">
         <div id="main" class="center">
             <div id="clock" class="timer">00:00</div>
-            <div id="buttons" class="">
+            <div id="buttons" class="no-drag">
                 <button id="start" class="start">
                     <div class="">Start</div>
                 </button>
