--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,13 @@
         <link rel="stylesheet" type="text/css" href="index.css"></link>
         <title>Pomodoro - Electron</title>
     </head>
-    <body class="background center drag">
-        <div id="main" class="center">
+    <body class="background center drag use-full-height">
+        <div class="title-bar">
+            <div id="title">
+            </div>
+            <div id="icons">
+                </div>
+        <div id="main" class="center use-full-height">
             <div id="clock" class="timer">00:00</div>
             <div id="buttons" class="no-drag">
                 <button id="start" class="start">
