--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,57 @@
     <body class="background center drag use-full-height">
         <div class="title-bar">
             <div id="title">
+            <!-- TIMER ICON -->
+            <!-- <div class="svg-icon"> -->
+            <!--     <?xml version="1.0" encoding="utf-8"?> -->
+            <!--     
+<!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+            <!--     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+ -->
+            <!--       <title>time-stopwatch-solid</title>
+ -->
+            <!--       <g id="Layer_2" data-name="Layer 2">
+ -->
+            <!--         <g id="invisible_box" data-name="invisible box">
+ -->
+            <!--           <rect width="48" height="48" fill="none"/>
+ -->
+            <!--         </g>
+ -->
+            <!--         <g id="Q3_icons" data-name="Q3 icons">
+ -->
+            <!--           <path fill="currentColor" d="M38.8,15.1l2.4-2.5a1.9,1.9,0,0,0,0-2.8,1.8,1.8,0,0,0-1.4-.6,2,2,0,0,0-1.4.6l-2.5,2.4A19.1,19.1,0,0,0,26,8.1V6h2a2,2,0,0,0,0-4H20a2,2,0,0,0,0,4h2V8.1a19,19,0,1,0,16.8,7ZM39,27H24V12A15,15,0,0,1,39,27Z"/>
+ -->
+            <!--         </g>
+ -->
+            <!--       </g>
+ -->
+            <!--     </svg> -->
+            <!-- </div> -->
             </div>
             <div id="icons">
+                <!-- MINIMIZE ICON -->
+                <div class="min-icon">
+                    <?xml version="1.0" encoding="utf-8"?>
+                    <!-- Svg Vector Icons : http://www.onlinewebfonts.com/icon -->
+                    <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
+                        <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
+                        <g><path fill="currentColor" d="M10,367.3h980v265.4H10V367.3L10,367.3z"/></g>
+                    </svg>
                 </div>
+                <!-- CLOSE ICON -->
+                <div class="svg-icon">
+                    <?xml version="1.0" encoding="utf-8"?>
+                    <!-- Svg Vector Icons : http://www.onlinewebfonts.com/icon -->
+                    <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
+                        <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
+                        <g><g><path fill="currentColor" d="M990,206L794,10L500,304L206,10L10,206l294,294L10,794l196,196l294-294l294,294l196-196L696,500L990,206z"/></g></g>
+                    </svg>
+                </div>
+            </div>
+        </div>
         <div id="main" class="center use-full-height">
             <div id="clock" class="timer">00:00</div>
             <div id="buttons" class="no-drag">
