hover on title buttons

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             </div>
             <div id="icons">
                 <!-- MINIMIZE ICON -->
-                <div class="min-icon">
+                <div id="min-icon" class="svg-icon no-drag">
                     <?xml version="1.0" encoding="utf-8"?>
                     <!-- Svg Vector Icons : http://www.onlinewebfonts.com/icon -->
                     <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
@@ -52,7 +52,7 @@
                     </svg>
                 </div>
                 <!-- CLOSE ICON -->
-                <div class="svg-icon">
+                <div id="close-icon" class="svg-icon no-drag">
                     <?xml version="1.0" encoding="utf-8"?>
                     <!-- Svg Vector Icons : http://www.onlinewebfonts.com/icon -->
                     <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
