--- a/src/index.html
+++ b/src/index.html
@@ -43,23 +43,11 @@
             <div id="icons">
                 <!-- MINIMIZE ICON -->
                 <div id="min-icon" class="svg-icon no-drag">
-                    <?xml version="1.0" encoding="utf-8"?>
-                    <!-- Svg Vector Icons : http://www.onlinewebfonts.com/icon -->
-                    <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
-                        <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
-                        <g><path fill="currentColor" d="M10,367.3h980v265.4H10V367.3L10,367.3z"/></g>
-                    </svg>
+                    <object type="image/svg+xml" data="assets/icons/download.svg"></object>
                 </div>
                 <!-- CLOSE ICON -->
                 <div id="close-icon" class="svg-icon no-drag">
-                    <?xml version="1.0" encoding="utf-8"?>
-                    <!-- Svg Vector Icons : http://www.onlinewebfonts.com/icon -->
-                    <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
-                        <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
-                        <g><g><path fill="currentColor" d="M990,206L794,10L500,304L206,10L10,206l294,294L10,794l196,196l294-294l294,294l196-196L696,500L990,206z"/></g></g>
-                    </svg>
+                    <object type="image/svg+xml" data="assets/icons/close_lg.svg"></object>
                 </div>
             </div>
         </div>
