--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8" />
         <meta
           http-equiv="Content-Security-Policy"
-          content="default-src 'self'; script-src 'self'"
+          content="default-src 'self'; script-src 'self' 'unsafe-inline'"
         />
+        <link rel="stylesheet" type="text/css" href="assets/icons/svg.css"></link>
         <link rel="stylesheet" type="text/css" href="index.css"></link>
         <title>Pomodoro - Electron</title>
     </head>
