--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,9 @@
                 <button id="stop" class="stop">Stop</button>
             </div>
         </div>
-        <script src="../dist/render.js" defer></script>
+        <!-- <script src="../dist/render.js" defer></script> -->
+        <script>
+            require('../dist/render.js');
+        </script>
     </body>
 </html>
