changing back to inline svg...

--- a/src/index.html
+++ b/src/index.html
@@ -14,41 +14,29 @@
         <div class="title-bar">
             <div id="title">
             <!-- TIMER ICON -->
-            <!-- <div class="svg-icon"> -->
-            <!--     <?xml version="1.0" encoding="utf-8"?> -->
-            <!--     
-<!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-            <!--     <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
- -->
-            <!--       <title>time-stopwatch-solid</title>
- -->
-            <!--       <g id="Layer_2" data-name="Layer 2">
- -->
-            <!--         <g id="invisible_box" data-name="invisible box">
- -->
-            <!--           <rect width="48" height="48" fill="none"/>
- -->
-            <!--         </g>
- -->
-            <!--         <g id="Q3_icons" data-name="Q3 icons">
- -->
-            <!--           <path fill="currentColor" d="M38.8,15.1l2.4-2.5a1.9,1.9,0,0,0,0-2.8,1.8,1.8,0,0,0-1.4-.6,2,2,0,0,0-1.4.6l-2.5,2.4A19.1,19.1,0,0,0,26,8.1V6h2a2,2,0,0,0,0-4H20a2,2,0,0,0,0,4h2V8.1a19,19,0,1,0,16.8,7ZM39,27H24V12A15,15,0,0,1,39,27Z"/>
- -->
-            <!--         </g>
- -->
-            <!--       </g>
- -->
-            <!--     </svg> -->
-            <!-- </div> -->
+            <div class="svg-icon">
+
+            </div>
             </div>
             <div id="icons">
                 <!-- MINIMIZE ICON -->
                 <div id="min-icon" class="svg-icon no-drag">
-                    <object type="image/svg+xml" data="assets/icons/download.svg"></object>
+                    <svg version="1.1" id="min-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 43.329 43.329" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path fill="currentColor" d="M42.657,37.547c0-1.75-1.419-3.171-3.172-3.171H3.842c-1.751,0-3.171,1.419-3.171,3.171v2.611
+                                    c0,1.751,1.42,3.171,3.171,3.171h35.645c1.751,0,3.171-1.42,3.171-3.171L42.657,37.547L42.657,37.547z"/>
+                            </g>
+                        </g>
+                    </svg>
                 </div>
                 <!-- CLOSE ICON -->
                 <div id="close-icon" class="svg-icon no-drag">
-                    <object type="image/svg+xml" data="assets/icons/close_lg.svg"></object>
+                    <svg id="close-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g id="Menu / Close_LG">
+                            <path fill="currentColor" id="close" d="M21 21L12 12M12 12L3 3M12 12L21.0001 3M12 12L3 21.0001" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                        </g>
+                    </svg>         
                 </div>
             </div>
         </div>
