duplicated id in elements

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
             </div>
             <div id="icons">
                 <!-- MINIMIZE ICON -->
-                <div id="min-icon" class="svg-icon no-drag">
-                    <svg version="1.1" id="min-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 43.329 43.329" xml:space="preserve">
+                <div id="min-icon" class="svg-icon center no-drag">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 43.329 43.329" xml:space="preserve">
                         <g>
                             <g>
                                 <path fill="currentColor" d="M42.657,37.547c0-1.75-1.419-3.171-3.172-3.171H3.842c-1.751,0-3.171,1.419-3.171,3.171v2.611
@@ -31,8 +31,8 @@
                     </svg>
                 </div>
                 <!-- CLOSE ICON -->
-                <div id="close-icon" class="svg-icon no-drag">
-                    <svg id="close-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <div id="close-icon" class="svg-icon center no-drag">
+                    <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g id="Menu / Close_LG">
                             <path fill="currentColor" id="close" d="M21 21L12 12M12 12L3 3M12 12L21.0001 3M12 12L3 21.0001" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
                         </g>
