action buttons css

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html>
+<html>
     <head>
         <meta charset="UTF-8" />
         <meta
@@ -47,7 +47,7 @@
                     <div class="">Start</div>
                 </button>
                 <button id="pause" class="pause">Pause</button>
-                <button id="continue" class="continue">Pause</button>
+                <button id="continue" class="continue">Continue</button>
                 <button id="stop" class="stop">Stop</button>
             </div>
         </div>
