Sets the init timer from the render

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div id="main" class="center use-full-height">
-            <div id="clock" class="timer">00:00</div>
+            <div id="clock" class="timer"></div>
             <div id="buttons" class="no-drag">
                 <button id="start" class="start">
                     <div class="">Start</div>
